Att banco, falta o swagger
