# src/models/PessoaJuridica.js
@@ -1,42 +1,6 @@
 import mongoose from "mongoose";
 import bcrypt from "bcrypt";
 
-const SocialMediaSchema = new mongoose.Schema({
-  instagram: {
-    type: String,
-    required: false,
-  },
-  facebook: {
-    type: String,
-    required: false,
-  },
-  twitter: {
-    type: String,
-    required: false,
-  },
-});
-
-const ContatoSchema = new mongoose.Schema({
-  celular: {
-    type: String,
-    required: false,
-  },
-  telefone: {
-    type: String,
-    required: false,
-  },
-});
-
-const EnderecoSchema = new mongoose.Schema({
-  endereco1: {
-    type: String,
-    required: false,
-  },
-  endereco2: {
-    type: String,
-    required: false,
-  },
-});
 
 const PessoaJuridicaSchema = new mongoose.Schema({
   name: {
@@ -63,11 +27,6 @@ const PessoaJuridicaSchema = new mongoose.Schema({
     type: String,
     required: true,
   },
-  redessociais: SocialMediaSchema,
-
-  contatos: ContatoSchema,
-
-  endereco: EnderecoSchema,
 });
 
 //faz a criptografia do password
