# src/models/PlanoFree.js
@@ -1,6 +1,6 @@
 import mongoose from "mongoose";
 
-const CarrosselSchema = new mongoose.Schema({
+const GaleriaSchema = new mongoose.Schema({
   img1: {
     type: String,
     required: false,
@@ -21,6 +21,66 @@ const CarrosselSchema = new mongoose.Schema({
     type: String,
     required: false,
   },
+  img6: {
+    type: String,
+    required: false,
+  },
+  img7: {
+    type: String,
+    required: false,
+  },
+  img8: {
+    type: String,
+    required: false,
+  },
+  img9: {
+    type: String,
+    required: false,
+  },
+  img10: {
+    type: String,
+    required: false,
+  },
+  img11: {
+    type: String,
+    required: false,
+  },
+  img12: {
+    type: String,
+    required: false,
+  },
+  img13: {
+    type: String,
+    required: false,
+  },
+  img14: {
+    type: String,
+    required: false,
+  },
+  img15: {
+    type: String,
+    required: false,
+  },
+  img16: {
+    type: String,
+    required: false,
+  },
+  img17: {
+    type: String,
+    required: false,
+  },
+  img18: {
+    type: String,
+    required: false,
+  },
+  img19: {
+    type: String,
+    required: false,
+  },
+  img20: {
+    type: String,
+    required: false,
+  },
 });
 
 const FuncionamentoSchema = new mongoose.Schema({
@@ -38,8 +98,53 @@ const FuncionamentoSchema = new mongoose.Schema({
   },
 });
 
+const SocialMediaSchema = new mongoose.Schema({
+  instagram: {
+    type: String,
+    required: false,
+  },
+  facebook: {
+    type: String,
+    required: false,
+  },
+  twitter: {
+    type: String,
+    required: false,
+  },
+});
+
+const ContatoSchema = new mongoose.Schema({
+  celular: {
+    type: String,
+    required: false,
+  },
+  telefone: {
+    type: String,
+    required: false,
+  },
+  email: {
+    type: String,
+    required: false,
+  },
+});
+
+const EnderecoSchema = new mongoose.Schema({
+  endereco1: {
+    type: String,
+    required: false,
+  },
+  endereco2: {
+    type: String,
+    required: false,
+  },
+});
+
 const PlanoFreeSchema = new mongoose.Schema({
   categoria: {
+    type: String,
+    required: true,
+  },
+  descricao: {
     type: String,
     required: true,
   },
@@ -47,8 +152,17 @@ const PlanoFreeSchema = new mongoose.Schema({
     type: Array,
     required: true,
   },
-  carrossel: CarrosselSchema,
+  
+  galeria: GaleriaSchema,
+
   funcionamento: FuncionamentoSchema,
+
+  redessociais: SocialMediaSchema,
+
+  contatos: ContatoSchema,
+
+  endereco: EnderecoSchema,
+
   pessoajuridica: {
     type: mongoose.Schema.Types.ObjectId,
     ref: "PessoaJuridica",
